# juno-windows

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: windows.yml
docs/: ARCHITECTURE.md  PARITY.md  RELEASING.md  contract-maps.json
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  quick.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: api_request.toml  api_stream.toml  api_stream_cancel.toml  api_upload_bytes.toml  api_upload_path.toml  auth_configure.toml  auth_exchange.toml  auth_has_session.toml  host_info.toml  pty_kill_session.toml  pty_run.toml  quick_draft_clear.toml  quick_draft_load.toml  quick_draft_save.toml  quick_get_settings.toml  quick_hide.toml  quick_main_startup.toml  quick_open_main.toml  quick_quit.toml  quick_set_runtime_state.toml  quick_update_settings.toml  set_window_material.toml  voice_close.toml  voice_connect.toml  voice_send_audio.toml  voice_send_text.toml  workspace_pick.toml  workspace_revoke.toml  workspace_set_mode.toml  ws_changed_paths.toml  ws_delete_file.toml  ws_list.toml  ws_read.toml  ws_restore_to_before.toml  ws_search.toml  ws_snapshot.toml  ws_write.toml
src-tauri/src/: error.rs  host.rs  lib.rs  main.rs  material.rs  quick.rs  secrets.rs
src-tauri/src/code/: checkpoints.rs  fs.rs  git.rs  mod.rs  search.rs  terminal.rs  workspace.rs
src-tauri/src/net/: auth.rs  commands.rs  mod.rs  stream.rs  upload.rs  voice.rs
src/app/: AnnouncementBar.tsx  App.tsx  MenuBar.tsx  Shell.tsx  SignIn.tsx  Titlebar.tsx  announcement.css  app.css  menubar.css  shell.css  signin.css  titlebar.css
src/components/: ContextMenu.tsx  Dialog.tsx  Markdown.tsx  ProviderLogo.tsx  contextmenu.css  dialog.css  markdown.css  overlayStack.ts
src/components/signature/: AsciiHero.tsx  DotMatrix.tsx  EffortMeter.tsx  ThinkingDots.tsx  VoiceOrb.tsx  signature.css
src/design/: base.css  fonts.css  motion.css  tokens.css
src/features/chat/: ArtifactsPanel.tsx  ChatPopover.tsx  ChatView.tsx  (+9 more)
src/lib/: host.ts  material.ts  updater.ts
src/quick/: QuickApp.tsx  quick.css
src/state/: authStore.ts  codeStore.ts  dataStore.ts  threadStore.ts  uiStore.ts  voiceStore.ts
(+89 files in other folders)
