[package]
name = "juno-windows"
version = "0.2.0"
description = "Juno for Windows — native desktop client of the Juno backend"
authors = ["Juno"]
edition = "2021"
rust-version = "1.82"

[lib]
name = "juno_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-opener = "2.5"
tauri-plugin-deep-link = "2.4"
tauri-plugin-dialog = "2.7"
tauri-plugin-process = "2.3"
tauri-plugin-single-instance = { version = "2.4", features = ["deep-link"] }
tauri-plugin-window-state = "2.4"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-autostart = "2.5"
window-vibrancy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
base64 = "0.22"
futures-util = "0.3"
mime_guess = "2"
keyring = { version = "3", features = ["windows-native", "apple-native"] }
portable-pty = "0.9"
similar = { version = "3", features = ["text", "unicode"] }
ignore = "0.4"
globset = "0.4"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
dirs = "6"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if the env has TAURI_ENV_DEBUG
default = ["custom-protocol"]
# this feature is used for production builds where `devUrl` is not used
custom-protocol = ["tauri/custom-protocol"]
